# craft

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  index.html  search-index.js
craft/: execute_main_without_stdin.v.html  fn.call_main_without_stdin.html  fn.execute_main_without_stdin.html  fn.handle_error.html  fn.process_executed.html  fn.shell.html  fn.version.html  index.html  process_executed.v.html  sidebar-items.js
craft/dependency/: DependencyInner.t.html  enum.Kind.html  enum.Platform.html  index.html  sidebar-items.js  struct.Dependency.html  struct.DependencyInner.html
craft/manifest/: enum.EitherManifest.html  enum.LibKind.html  enum.TargetKind.html  index.html  sidebar-items.js  struct.Manifest.html  struct.ManifestMetadata.html  struct.Profile.html  struct.Profiles.html  struct.Target.html  struct.VirtualManifest.html
craft/ops/: LayoutProxy.t.html  enum.CompileFilter.html  enum.CompileMode.html  enum.Kind.html  enum.MessageFormat.html  enum.VersionControl.html  fn.clean.html  fn.compile.html  fn.compile_targets.html  fn.compile_ws.html  fn.doc.html  fn.fetch.html  fn.generate_lockfile.html  fn.get_resolved_packages.html  fn.init.html  fn.install.html  fn.install_list.html  fn.load_pkg_lockfile.html  fn.new.html  fn.output_metadata.html  (+31 more)
src/: core.rs  dependency.rs  lib.rs  manifest.rs  package.rs  package_id.rs  package_id_spec.rs  registry.rs  shell.rs  source.rs  summary.rs  workspace.rs
tests/: main.rs  new.rs
tests/crafttest/: Cargo.toml  install.rs  lib.rs
tests/crafttest/support/: git.rs  mod.rs  paths.rs  registry.rs
(+447 files in other folders)
