[package]
name = "craft"
version = "0.1.0"
license = "MIT"
readme = "README.md"
keywords = ["build", "system", "deploy", "c", "gcc", "clang"]
authors = ["Sascha Grunert <mail@saschagrunert.de>"]
repository = "https://github.com/saschagrunert/craft"
homepage = "https://github.com/saschagrunert/craft"
documentation = "https://saschagrunert.github.io/craft"
description = "Cargo inspired build system for C based projects"

[dependencies]
advapi32-sys = "0"
crossbeam = "0"
curl = "0"
docopt = "0"
env_logger = "0"
filetime = "0"
flate2 = "0"
fs2 = "0"
git2 = "0"
git2-curl = "0"
glob = "0"
kernel32-sys = "0"
libc = "0"
libgit2-sys = "0"
log = "0"
miow = "0"
num_cpus = "1"
psapi-sys = "0"
regex = "0"
rustc-serialize = "0"
semver = "0"
tar = { version = "0", default-features = false }
tempdir = "0"
term = "0"
toml = "0"
url = "1"
winapi = "0"

[target.'cfg(unix)'.dependencies]
openssl = "0"

[dev-dependencies]
hamcrest = "0"
bufstream = "0"
filetime = "0"
crafttest = { path = "tests/crafttest" }

[[bin]]
name = "craft"
test = false
doc = false
