[package]
name = "crafttest"
version = "0.1.0"
authors = ["Sascha Grunert <mail@saschagrunert.de>"]

[lib]
path = "lib.rs"

[dependencies]
bufstream = "0"
craft = { path = "../.." }
filetime = "0"
flate2 = "0"
git2 = "0"
hamcrest = "0"
kernel32-sys = "0"
libc = "0"
log = "0"
rustc-serialize = "0"
tar = { version = "0", default-features = false }
tempdir = "0"
term = "0"
url = "1"
winapi = "0"
